# audiovisual

./: .gitmodules  CMakeLists.txt  README.md  audiovisual.h  constants.h  generator.h  main.cpp  thread_communication.h  util.h
include/: audiovisual.h  constants.h  framework.h  generator.h  logging.h  oscillator.h  oscillator_ui.h  pa_management.h  plotting.h  thread_communication.h  util.h  windowing.h
lib/AudioFile/: CMakeLists.txt
lib/AudioFile/include/: AudioFile.h
lib/farbot/: CMakeLists.txt
lib/gcem/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/implot/: CMakeLists.txt
lib/portaudio/src/hostapi/asio/ASIOSDK/host/pc/: asiolist.cpp
src/: constants.cpp  logging.cpp  oscillator_ui.cpp  pa_management.cpp  plotting.cpp  thread_communication.cpp  util.cpp  windowing.cpp
